tests/snapshots/jira_agile__boards_filter_by_project_key.snap
---
source: tests/jira_agile.rs
expression: boards
---
[
    Board {
        id: 1,
        name: "DEMO board",
        board_type: "scrum",
        project_key: Some(
            "DEMO",
        ),
    },
    Board {
        id: 2,
        name: "Ops kanban",
        board_type: "kanban",
        project_key: Some(
            "10001",
        ),
    },
]
