tests/snapshots/jira_agile__boards_parse_project_location-2.snap
---
source: tests/jira_agile.rs
expression: jira.request_snapshots().await
---
[
  {
    "body": null,
    "method": "GET",
    "path": "/ex/jira/test-cloud/rest/agile/1.0/board",
    "query": [
      {
        "k": "maxResults",
        "v": "50"
      }
    ]
  }
]
