tests/snapshots/jira_agile__projects_reuse_board_model.snap
---
source: tests/jira_agile.rs
expression: projects
---
[
    Board {
        id: 10000,
        name: "Demo",
        board_type: "project",
        project_key: Some(
            "DEMO",
        ),
    },
    Board {
        id: 10001,
        name: "Ops",
        board_type: "project",
        project_key: Some(
            "OPS",
        ),
    },
]
